[gd_scene load_steps=12 format=3 uid="uid://dw63jis0k8ss7"]

[ext_resource type="Script" path="res://unfinished/adjust/level_.gd" id="1_2rroj"]
[ext_resource type="Script" path="res://unfinished/adjust/curcus.gd" id="2_03cd3"]
[ext_resource type="Script" path="res://unfinished/adjust/set_Pon.gd" id="3_b2g3k"]
[ext_resource type="Texture2D" uid="uid://ooxyflrhc1wq" path="res://Assets/pngwing.com (1).png" id="4_lijjo"]
[ext_resource type="PackedScene" uid="uid://bjtetuih8j2t6" path="res://unfinished/adjust/control.tscn" id="6_5uqcs"]
[ext_resource type="Script" path="res://start0/Reward_test.cs" id="7_fa4wt"]
[ext_resource type="PackedScene" uid="uid://v44ine65ib05" path="res://Pon2/tile_map.tscn" id="7_xcvvi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gmny3"]
radius = 88.8876

[sub_resource type="Shader" id="Shader_k3oix"]
code = "shader_type spatial;
render_mode unshaded,cull_disabled;

void fragment() {
	// Place fragment code here.
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7qvtc"]
render_priority = 0
shader = SubResource("Shader_k3oix")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2w5u5"]
size = Vector2(2203, 34)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_2rroj")

[node name="cursors" type="Node2D" parent="."]
script = ExtResource("2_03cd3")

[node name="Sprite2D" type="Sprite2D" parent="cursors"]

[node name="Label" type="Label" parent="cursors/Sprite2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_layer = 3
collision_mask = 3
script = ExtResource("3_b2g3k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource("CircleShape2D_gmny3")

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D/CollisionShape2D"]
material = SubResource("ShaderMaterial_7qvtc")
position = Vector2(0, -0.5)
scale = Vector2(0.3, 0.288333)
texture = ExtResource("4_lijjo")

[node name="Area2D" type="Area2D" parent="RigidBody2D"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
shape = SubResource("CircleShape2D_gmny3")

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D/Area2D/CollisionShape2D2"]
scale = Vector2(0.2, 0.2)

[node name="Marker2D" type="Marker2D" parent="RigidBody2D"]

[node name="Control" parent="." instance=ExtResource("6_5uqcs")]

[node name="Node" type="Node" parent="."]

[node name="TileMap" parent="Node" instance=ExtResource("7_xcvvi")]
position = Vector2(3, 4)

[node name="Area2D" type="Area2D" parent="Node/TileMap"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/TileMap/Area2D"]
position = Vector2(889, 1087)
shape = SubResource("RectangleShape2D_2w5u5")
debug_color = Color(0.85098, 0.188235, 0.788235, 0.419608)

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -15.5
offset_right = 100.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "BUTTON"

[node name="Button2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -15.5
offset_right = 100.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Reward" type="Node2D" parent="."]
script = ExtResource("7_fa4wt")

[connection signal="area_entered" from="RigidBody2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_area_2d_area_entered"]
[connection signal="slidee" from="Control" to="." method="_on_control_slidee"]
[connection signal="slidef" from="Control" to="." method="_on_control_slidef"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button" to="Reward" method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button2" to="Reward" method="_on_button_2_pressed"]
